[package]
name = "eth-proof"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers = "2.0.7"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0.71"
plonky2 = { git = "https://github.com/0xPolygonZero/plonky2", rev = "29fdd3e372c721d65ada7363a1554202e7ab0e7b" }
plonky2_evm = { git = "https://github.com/0xPolygonZero/plonky2", rev = "29fdd3e372c721d65ada7363a1554202e7ab0e7b" }
proof_protocol_decoder = { git = "https://github.com/0xPolygonZero/proof-protocol-decoder", rev = "076d51df6589fe24a4bc82607223a06492ae6b8f" }
flexi_logger = { version = "0.25.1", features = ["async"] }
eth_trie_utils = { git = "https://github.com/0xPolygonZero/eth_trie_utils", rev = "e9ec4ec2aa2ae976b7c699ef40c1ffc716d87ed5" }
hex = "0.4.3"
regex = "1.9"
rand = "0.8.4"

[patch.crates-io]
plonky2 = { git = "https://github.com/0xPolygonZero/plonky2", rev = "29fdd3e372c721d65ada7363a1554202e7ab0e7b" }
