[package]
name = "eth-proof"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers = "2.0.7"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0.71"
plonky_block_proof_gen = { git = "https://github.com/0xPolygonZero/plonky-block-proof-gen.git", rev = "5a55f695aedb47218242aec1191fd01c61e8f1d2" }
plonky2 = { git = "https://github.com/0xPolygonZero/plonky2", rev = "49976ea2a98dcb6052bd6cf3a65f730e55727330" }
plonky2_evm = { git = "https://github.com/0xPolygonZero/plonky2", rev = "49976ea2a98dcb6052bd6cf3a65f730e55727330" }
proof_protocol_decoder = { git = "https://github.com/0xPolygonZero/proof-protocol-decoder", rev = "ddd9a3600a7159b5f7fde2330f00a403224e2161" }
flexi_logger = { version = "0.25.1", features = ["async"] }
eth_trie_utils = { git = "https://github.com/0xPolygonZero/eth_trie_utils", rev = "e9ec4ec2aa2ae976b7c699ef40c1ffc716d87ed5" }
hex = "0.4.3"
regex = "1.9"
rand = "0.8.4"

[patch."https://github.com/0xPolygonZero/plonky2"]
plonky2 = { git = "https://github.com/0xPolygonZero/plonky2?", rev = "49976ea2a98dcb6052bd6cf3a65f730e55727330" }
plonky2_evm = { git = "https://github.com/0xPolygonZero/plonky2?", rev = "49976ea2a98dcb6052bd6cf3a65f730e55727330" }
